# sendwol

./: .gitignore  Makefile  Makefile.am  README.md  configure  configure.ac  sendwol.1  sendwol.c  sendwol.ja.1
src/: Makefile.gcc  Makefile.pmake  main.c
